crates/sui-prover/tests/snapshots/quantifiers/funs_aborts.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 274
expression: output
---
exiting with verification errors
error: function code should not abort
   ┌─ tests/inputs/quantifiers/funs_aborts.fail.move:12:1
   │
12 │ }
   │ ^
   │
   =     at tests/inputs/quantifiers/funs_aborts.fail.move:9: x_is_10_aborts
